# sigmod-2024

./: .clang-tidy  .gitignore  CMakeLists.txt  Readme.md  run.sh
glasshouse/: Cargo.toml
glasshouse/src/: baseline.cpp  io.rs  main.rs
include/: io.h
src/: baseline.cpp  constants.rs  io.cpp  io.rs  types.rs
